@@ -1,6 +1,10 @@
 ChangeLog for PyLint
 ====================
 
+--
+    * fix #8764: More than one statement on a single line false positive with
+      try/except/finally
+	
 2009-03-25  --  0.18.0
     * tests ok with python 2.4, 2.5, 2.6. 2.3 not tested
 
